@@ -50,6 +50,9 @@ the time dimension and storing the result into a single output file.
                   Set data compression level for storing in HDF5 format.
                   0=disabled, 1=low, ..., 9=high.
 
+              --no-history
+                  Do not update the global history attribute.
+
           If the merged product is empty, a warning will be printed and the
           tool will return with exit code 2 (without writing a file).
 
