@@ -184,6 +184,9 @@
             <span class="o">-</span><span class="n">d</span><span class="p">,</span> <span class="o">--</span><span class="n">data</span>
                 <span class="n">Show</span> <span class="n">data</span> <span class="n">values</span> <span class="k">for</span> <span class="n">each</span> <span class="n">variable</span><span class="o">.</span>
 
+            <span class="o">--</span><span class="n">no</span><span class="o">-</span><span class="n">history</span>
+                <span class="n">Do</span> <span class="ow">not</span> <span class="n">show</span> <span class="n">the</span> <span class="k">global</span> <span class="n">history</span> <span class="n">attribute</span><span class="o">.</span>
+
     <span class="n">harpdump</span> <span class="o">--</span><span class="n">dataset</span> <span class="p">[</span><span class="n">options</span><span class="p">]</span> <span class="o">&lt;</span><span class="n">file</span><span class="o">|</span><span class="nb">dir</span><span class="o">&gt;</span> <span class="p">[</span><span class="o">&lt;</span><span class="n">file</span><span class="o">|</span><span class="nb">dir</span><span class="o">&gt;</span> <span class="o">...</span><span class="p">]</span>
         <span class="n">Print</span> <span class="n">metadata</span> <span class="k">for</span> <span class="nb">all</span> <span class="n">files</span> <span class="ow">in</span> <span class="n">the</span> <span class="n">dataset</span> <span class="ow">in</span> <span class="n">csv</span> <span class="nb">format</span><span class="o">.</span>
 
