@@ -204,6 +204,9 @@ the time dimension and storing the result into a single output file.</p>
                 <span class="n">Set</span> <span class="n">data</span> <span class="n">compression</span> <span class="n">level</span> <span class="k">for</span> <span class="n">storing</span> <span class="ow">in</span> <span class="n">HDF5</span> <span class="nb">format</span><span class="o">.</span>
                 <span class="mi">0</span><span class="o">=</span><span class="n">disabled</span><span class="p">,</span> <span class="mi">1</span><span class="o">=</span><span class="n">low</span><span class="p">,</span> <span class="o">...</span><span class="p">,</span> <span class="mi">9</span><span class="o">=</span><span class="n">high</span><span class="o">.</span>
 
+            <span class="o">--</span><span class="n">no</span><span class="o">-</span><span class="n">history</span>
+                <span class="n">Do</span> <span class="ow">not</span> <span class="n">update</span> <span class="n">the</span> <span class="k">global</span> <span class="n">history</span> <span class="n">attribute</span><span class="o">.</span>
+
         <span class="n">If</span> <span class="n">the</span> <span class="n">merged</span> <span class="n">product</span> <span class="ow">is</span> <span class="n">empty</span><span class="p">,</span> <span class="n">a</span> <span class="n">warning</span> <span class="n">will</span> <span class="n">be</span> <span class="n">printed</span> <span class="ow">and</span> <span class="n">the</span>
         <span class="n">tool</span> <span class="n">will</span> <span class="k">return</span> <span class="k">with</span> <span class="n">exit</span> <span class="n">code</span> <span class="mi">2</span> <span class="p">(</span><span class="n">without</span> <span class="n">writing</span> <span class="n">a</span> <span class="n">file</span><span class="p">)</span><span class="o">.</span>
 
