@@ -394,7 +394,7 @@
 <dt><strong>Parameters</strong></dt>
 <dd><ul class="breatheparameterlist first last simple">
 <li><code class="docutils literal notranslate"><span class="pre">product</span></code>: Product for which to set the source product attribute. </li>
-<li><code class="docutils literal notranslate"><span class="pre">product_path</span></code>: Relative or absolute path to the product or just the product filename. </li>
+<li><code class="docutils literal notranslate"><span class="pre">product_path</span></code>: Relative or absolute path to the product or just the product filename (can be NULL). </li>
 </ul>
 </dd>
 </dl>
@@ -414,7 +414,7 @@
 <dt><strong>Parameters</strong></dt>
 <dd><ul class="breatheparameterlist first last simple">
 <li><code class="docutils literal notranslate"><span class="pre">product</span></code>: Product for which to set the history attribute. </li>
-<li><code class="docutils literal notranslate"><span class="pre">history</span></code>: New value for the history attribute. </li>
+<li><code class="docutils literal notranslate"><span class="pre">history</span></code>: New value for the history attribute (can be NULL). </li>
 </ul>
 </dd>
 </dl>
